--- a/haber.html
+++ b/haber.html
@@ -24,27 +24,28 @@
             position: relative;
             text-align: center;
             flex-direction: column;
+            padding: 20px;
         }
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 2.5rem;
+            font-size: 2.2rem;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
             margin-bottom: 20px;
         }
 
         p {
-            font-size: 1.2rem;
+            font-size: 1rem;
             color: rgba(255, 255, 255, 0.8);
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             text-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
         }
 
         .news-gallery {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 30px;
+            gap: 20px;
             width: 80%;
             margin-top: 40px;
             position: relative;
@@ -54,7 +55,7 @@
             position: relative;
             width: 150px;
             height: 150px;
-            margin: 20px;
+            margin: 10px;
             border-radius: 10px;
             overflow: hidden;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
@@ -66,7 +67,7 @@
         }
 
         .news-item:hover {
-            transform: scale(1.1) rotate(0deg);
+            transform: scale(1.05) rotate(0deg);
             box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
         }
 
@@ -79,7 +80,7 @@
         }
 
         .news-item:hover img {
-            transform: scale(1.1);
+            transform: scale(1.05);
         }
 
         .news-content {
@@ -89,6 +90,8 @@
             padding: 20px;
             margin-top: 20px;
             border-radius: 10px;
+            font-size: 0.9rem;
+            line-height: 1.6;
         }
 
         .news-content.active {
@@ -183,11 +186,13 @@
 
     <script>
         function showContent(newsId) {
+            // Tüm haber içeriklerini gizle
             var allContents = document.querySelectorAll('.news-content');
             allContents.forEach(function(content) {
                 content.classList.remove('active');
             });
 
+            // Tıklanan haberin içeriğini göster
             var selectedContent = document.getElementById('news-content-' + newsId);
             selectedContent.classList.add('active');
         }
