--- a/haber.html
+++ b/haber.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Haberler</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+    <title>Haberler - Dinamik ve Şık Tasarım</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Raleway:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,7 +13,7 @@
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Raleway', sans-serif;
             background-color: #0a0a0a;
             color: white;
             display: flex;
@@ -24,39 +24,46 @@
             position: relative;
             text-align: center;
             flex-direction: column;
-            padding: 20px;
+            padding: 40px;
         }
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 2.2rem;
+            font-size: 3rem;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+            animation: fadeInText 1.5s ease-out;
             margin-bottom: 20px;
         }
 
+        @keyframes fadeInText {
+            0% { opacity: 0; transform: translateY(-50px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
         p {
-            font-size: 1rem;
+            font-size: 1.2rem;
             color: rgba(255, 255, 255, 0.8);
-            margin-bottom: 30px;
+            margin-bottom: 40px;
             text-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
+            animation: fadeInText 2s ease-out;
         }
 
         .news-gallery {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
-            gap: 20px;
-            width: 80%;
+            gap: 30px;
+            width: 85%;
             margin-top: 40px;
             position: relative;
         }
 
         .news-item {
             position: relative;
-            width: 150px;
-            height: 150px;
+            width: 250px;
+            height: 250px;
             margin: 10px;
-            border-radius: 10px;
+            border-radius: 15px;
             overflow: hidden;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
             background-color: rgba(255, 255, 255, 0.1);
@@ -64,10 +71,11 @@
             transform: rotate(5deg);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
+            overflow: hidden;
         }
 
         .news-item:hover {
-            transform: scale(1.05) rotate(0deg);
+            transform: scale(1.1) rotate(0deg);
             box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
         }
 
@@ -75,12 +83,12 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
+            border-radius: 15px;
             transition: transform 0.3s ease;
-            border-radius: 10px;
         }
 
         .news-item:hover img {
-            transform: scale(1.05);
+            transform: scale(1.1);
         }
 
         .news-content {
@@ -90,12 +98,22 @@
             padding: 20px;
             margin-top: 20px;
             border-radius: 10px;
-            font-size: 0.9rem;
+            font-size: 1rem;
             line-height: 1.6;
+            max-width: 80%;
+            margin: 20px auto;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
+            transition: opacity 0.3s ease;
         }
 
         .news-content.active {
             display: block;
+            animation: fadeInContent 1s ease-out;
+        }
+
+        @keyframes fadeInContent {
+            0% { opacity: 0; }
+            100% { opacity: 1; }
         }
 
         /* Tam ekran modunun stili */
@@ -147,41 +165,41 @@
 <body>
 
     <h1>Haberler</h1>
-    <p>Son Dakika ve Önemli Gelişmeler</p>
+    <p>Güncel Gelişmeler ve Son Dakika</p>
 
     <div class="news-gallery">
         <div class="news-item" onclick="showContent(1)">
-            <img src="https://via.placeholder.com/150" alt="Haber 1">
+            <img src="https://via.placeholder.com/250" alt="Haber 1">
         </div>
         <div class="news-item" onclick="showContent(2)">
-            <img src="https://via.placeholder.com/150" alt="Haber 2">
+            <img src="https://via.placeholder.com/250" alt="Haber 2">
         </div>
         <div class="news-item" onclick="showContent(3)">
-            <img src="https://via.placeholder.com/150" alt="Haber 3">
+            <img src="https://via.placeholder.com/250" alt="Haber 3">
         </div>
         <div class="news-item" onclick="showContent(4)">
-            <img src="https://via.placeholder.com/150" alt="Haber 4">
+            <img src="https://via.placeholder.com/250" alt="Haber 4">
         </div>
     </div>
 
     <div id="news-content-1" class="news-content">
         <h2>Haber Başlık 1</h2>
-        <p>Haber 1 içerikleri burada olacak. Bu yazı haberle ilgili açıklamayı içeriyor.</p>
+        <p>Bu haberin detayları burada olacak. Konuyla ilgili önemli bilgiler yer alacak.</p>
     </div>
 
     <div id="news-content-2" class="news-content">
         <h2>Haber Başlık 2</h2>
-        <p>Haber 2 içerikleri burada olacak. Bu yazı haberle ilgili açıklamayı içeriyor.</p>
+        <p>Bu haberin detayları burada olacak. Konuyla ilgili önemli bilgiler yer alacak.</p>
     </div>
 
     <div id="news-content-3" class="news-content">
         <h2>Haber Başlık 3</h2>
-        <p>Haber 3 içerikleri burada olacak. Bu yazı haberle ilgili açıklamayı içeriyor.</p>
+        <p>Bu haberin detayları burada olacak. Konuyla ilgili önemli bilgiler yer alacak.</p>
     </div>
 
     <div id="news-content-4" class="news-content">
         <h2>Haber Başlık 4</h2>
-        <p>Haber 4 içerikleri burada olacak. Bu yazı haberle ilgili açıklamayı içeriyor.</p>
+        <p>Bu haberin detayları burada olacak. Konuyla ilgili önemli bilgiler yer alacak.</p>
     </div>
 
     <script>
