--- a/haber.html
+++ b/haber.html
@@ -208,39 +208,17 @@
 
     <div class="news-gallery">
         <div class="news-item" onclick="showContent(1)">
-            <img src="https://via.placeholder.com/300" alt="Haber 1">
-            <div class="title">Haber Başlığı 1</div>
+            <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
+            <div class="title">Durdurlamaz!</div>
         </div>
-        <div class="news-item" onclick="showContent(2)">
-            <img src="https://via.placeholder.com/300" alt="Haber 2">
-            <div class="title">Haber Başlığı 2</div>
-        </div>
-        <div class="news-item" onclick="showContent(3)">
-            <img src="https://via.placeholder.com/300" alt="Haber 3">
-            <div class="title">Haber Başlığı 3</div>
-        </div>
-        <div class="news-item" onclick="showContent(4)">
-            <img src="https://via.placeholder.com/300" alt="Haber 4">
-            <div class="title">Haber Başlığı 4</div>
         </div>
     </div>
 
     <div class="news-content" id="content-1">
-        <h2>Haber 1 Detayı</h2>
-        <p>Haber 1 içeriği burada olacak...</p>
+        <h2>Durdurulamaz</h2>
+        <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
     </div>
-    <div class="news-content" id="content-2">
-        <h2>Haber 2 Detayı</h2>
-        <p>Haber 2 içeriği burada olacak...</p>
-    </div>
-    <div class="news-content" id="content-3">
-        <h2>Haber 3 Detayı</h2>
-        <p>Haber 3 içeriği burada olacak...</p>
-    </div>
-    <div class="news-content" id="content-4">
-        <h2>Haber 4 Detayı</h2>
-        <p>Haber 4 içeriği burada olacak...</p>
-    </div>
+
 
     <script>
         function showContent(newsId) {
