--- a/haber.html
+++ b/haber.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mertens</title></title>
+    <title>mertens</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Raleway:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         * {
@@ -81,7 +81,7 @@
         .news-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
+            object-fit: cover; /* Resmi düzgün yerleştirir */
             border-radius: 15px;
             transition: transform 0.3s ease;
         }
@@ -211,14 +211,12 @@
             <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
             <div class="title">Durdurlamaz!</div>
         </div>
-        </div>
     </div>
 
     <div class="news-content" id="content-1">
         <h2>Durdurulamaz</h2>
         <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
     </div>
-
 
     <script>
         function showContent(newsId) {
