--- a/haber.html
+++ b/haber.html
@@ -70,6 +70,7 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
             opacity: 0.9;
+            background-color: rgba(0, 0, 0, 0.3); /* Karanlık bir arka plan */
         }
 
         .news-item:hover {
@@ -78,16 +79,19 @@
             opacity: 1;
         }
 
+        /* Resim için özel çerçeve ve stil */
         .news-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Resmi düzgün yerleştirir */
-            border-radius: 15px;
-            transition: transform 0.3s ease;
+            object-fit: cover;
+            border-radius: 10px;
+            border: 4px solid #fff; /* Beyaz çerçeve */
+            transition: transform 0.3s ease, border-color 0.3s ease;
         }
 
         .news-item:hover img {
             transform: scale(1.1);
+            border-color: #ffcc00; /* Hoverda çerçeve rengini değiştirme */
         }
 
         /* Başlık Resminin Üzerinde Görünmesi */
