--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mehmet12ws</title>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+    <title>mertens</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Raleway:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
     <style>
         * {
             margin: 0;
@@ -13,18 +13,17 @@
         }
 
         body {
-            font-family: 'Poppins', sans-serif;
-            background-color: #0a0a0a;
+            font-family: 'Raleway', sans-serif;
+            background-color: #121212;
             color: white;
             display: flex;
             justify-content: center;
             align-items: center;
             height: 100vh;
             overflow: hidden;
-            position: relative;
-            text-align: center;
+            flex-direction: column;
             padding: 20px;
-            flex-direction: column; /* Dikey yerleşim */
+            text-align: center;
         }
 
         h1 {
@@ -32,29 +31,16 @@
             font-size: 3.5rem;
             color: #fff;
             text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
-            animation: fadeInText 2s ease-out;
-        }
-
-        @keyframes fadeInText {
-            0% { opacity: 0; transform: translateY(-50px); }
-            100% { opacity: 1; transform: translateY(0); }
-        }
-
-        p {
-            font-size: 1.5rem;
-            color: rgba(255, 255, 255, 0.8);
-            margin-top: 20px;
-            text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
-            animation: fadeInText 3s ease-out 1s forwards;
+            margin-bottom: 20px;
         }
 
         .gallery {
             display: grid;
             grid-template-columns: repeat(4, 1fr);
             gap: 20px;
-            margin-top: 40px;
             width: 80%;
             position: relative;
+            margin-top: 40px;
         }
 
         .image-container {
@@ -89,7 +75,7 @@
             transform: scale(1.1);
         }
 
-        /* Tam ekran modunun stili */
+        /* Tam ekran görsel */
         .fullscreen {
             position: fixed;
             top: 0;
@@ -97,24 +83,23 @@
             width: 100%;
             height: 100%;
             background-color: rgba(0, 0, 0, 0.9);
-            display: flex;
+            display: none;
             justify-content: center;
             align-items: center;
-            z-index: 1000;
-            display: none;
-        }
-
-        .fullscreen img {
-            max-width: 95%;
-            max-height: 95%;
-            object-fit: contain;
-            border-radius: 15px;
         }
 
         .fullscreen.active {
             display: flex;
         }
 
+        .fullscreen img {
+            max-width: 90%;
+            max-height: 90%;
+            object-fit: contain;
+            border-radius: 15px;
+        }
+
+        /* Kapatma butonu */
         .close-btn {
             position: absolute;
             top: 20px;
@@ -126,84 +111,47 @@
             border-radius: 50%;
             cursor: pointer;
             padding: 10px;
-            z-index: 2000;
+            z-index: 1000;
         }
 
         .close-btn:hover {
             background: rgba(255, 255, 255, 0.2);
         }
 
-        /* Video Stili */
-        .video-container {
-            width: 70%;
-            max-width: 700px; /* Küçültülmüş boyut */
-            margin-top: 50px;
-            position: relative;
-            background-color: rgba(255, 255, 255, 0.1);
-            padding: 20px;
-            border-radius: 15px;
-            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
-            display: flex;
-            justify-content: center; /* Ortalamak için */
-            align-items: center;
-            margin-left: 10%; /* Sağ tarafa kaydırmak için */
-        }
-
-        video {
-            width: 100%;
-            height: auto;
-            border-radius: 15px;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-        }
     </style>
 </head>
 <body>
 
-    <div>
-        <h1>Hayat Olmasada</h1>
-        <p>Seninle Güzel</p>
+    <h1>Güncel Haberler</h1>
 
-        <div class="gallery">
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
-            </div>
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2" onclick="openFullscreen(this)">
-            </div>
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3" onclick="openFullscreen(this)">
-            </div>
-            <div class="image-container">
-                <img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4" onclick="openFullscreen(this)">
-            </div>
+    <!-- Galeri Kısmı -->
+    <div class="gallery">
+        <div class="image-container">
+            <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 1" onclick="openFullscreen(this)">
         </div>
-        
-        <!-- Video Ekleme Alanı -->
-        <div class="video-container">
-            <video controls>
-                <source src="https://cdn.discordapp.com/attachments/1196885529845829674/1316820602002079805/inter_tecavuz.mp4?ex=677ac2c0&is=67797140&hm=cc2498b7fd51b4a923c80e07c2d31d75b3b28f17a1241d27f48b319f3f59a41e&" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+        <div class="image-container">
+            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 2" onclick="openFullscreen(this)">
         </div>
-
+        <!-- Daha fazla resim ekleyebilirsiniz -->
     </div>
 
-    <div class="fullscreen" id="fullscreen-container">
-        <button class="close-btn" onclick="closeFullscreen()">×</button>
-        <img id="fullscreen-image" src="" alt="Fullscreen Image">
+    <!-- Tam Ekran Görseli -->
+    <div class="fullscreen" id="fullscreen">
+        <button class="close-btn" onclick="closeFullscreen()">X</button>
+        <img id="fullscreenImage" src="" alt="Fullscreen Image">
     </div>
 
     <script>
-        function openFullscreen(imgElement) {
-            var fullscreenContainer = document.getElementById('fullscreen-container');
-            var fullscreenImage = document.getElementById('fullscreen-image');
-            fullscreenImage.src = imgElement.src;
-            fullscreenContainer.classList.add('active');
+        function openFullscreen(image) {
+            const fullscreen = document.getElementById("fullscreen");
+            const fullscreenImage = document.getElementById("fullscreenImage");
+            fullscreenImage.src = image.src;
+            fullscreen.classList.add("active");
         }
 
         function closeFullscreen() {
-            var fullscreenContainer = document.getElementById('fullscreen-container');
-            fullscreenContainer.classList.remove('active');
+            const fullscreen = document.getElementById("fullscreen");
+            fullscreen.classList.remove("active");
         }
     </script>
 
