--- a/index.html
+++ b/index.html
@@ -34,88 +34,128 @@
             margin-bottom: 20px;
         }
 
-        .gallery {
-            display: grid;
-            grid-template-columns: repeat(4, 1fr);
-            gap: 20px;
-            width: 80%;
-            position: relative;
-            margin-top: 40px;
+        p {
+            font-size: 1.3rem;
+            color: rgba(255, 255, 255, 0.8);
+            margin-bottom: 40px;
+            text-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
         }
 
-        .image-container {
+        .news-gallery {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+            width: 80%;
+            margin-top: 40px;
             position: relative;
-            width: 200px; /* Küçültülmüş boyut */
-            height: 200px; /* Küçültülmüş boyut */
+        }
+
+        .news-item {
+            position: relative;
+            width: 100%;
+            height: 250px; /* Kare şekli için yükseklik */
             margin: 10px;
             border-radius: 15px;
             overflow: hidden;
-            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
-            cursor: pointer;
+            box-shadow: 0 0 25px rgba(255, 255, 255, 0.6);
             background-color: rgba(255, 255, 255, 0.1);
             border: 2px solid rgba(255, 255, 255, 0.3);
-            transform: rotate(5deg);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+            opacity: 0.9;
+            object-fit: contain; /* Resmin tamamının görünmesi için */
         }
 
-        .image-container:hover {
-            transform: scale(1.05) rotate(0deg);
-            box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
+        .news-item:hover {
+            transform: scale(1.05);
+            box-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
+            opacity: 1;
         }
 
-        .image-container img {
+        .news-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover;
-            transition: transform 0.3s ease;
+            object-fit: contain; /* Resmi kareye uyumlu şekilde yerleştirir */
             border-radius: 15px;
+            transition: transform 0.3s ease;
         }
 
-        .image-container:hover img {
+        .news-item:hover img {
             transform: scale(1.1);
         }
 
-        /* Tam ekran görsel */
-        .fullscreen {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background-color: rgba(0, 0, 0, 0.9);
-            display: none;
-            justify-content: center;
-            align-items: center;
-        }
-
-        .fullscreen.active {
-            display: flex;
-        }
-
-        .fullscreen img {
-            max-width: 90%;
-            max-height: 90%;
-            object-fit: contain;
-            border-radius: 15px;
-        }
-
-        /* Kapatma butonu */
-        .close-btn {
+        /* Başlık Resminin Üzerinde Görünmesi */
+        .news-item .title {
             position: absolute;
-            top: 20px;
-            right: 20px;
-            font-size: 40px;
+            bottom: 0;
+            left: 0;
+            right: 0;
+            background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            background: rgba(0, 0, 0, 0.6);
-            border: none;
-            border-radius: 50%;
-            cursor: pointer;
+            font-size: 1.5rem;
             padding: 10px;
-            z-index: 1000;
+            text-align: center;
+            font-weight: bold;
+            font-family: 'Poppins', sans-serif;
+            transition: transform 0.3s ease, background-color 0.3s ease;
         }
 
-        .close-btn:hover {
-            background: rgba(255, 255, 255, 0.2);
+        .news-item:hover .title {
+            transform: translateY(-10px);
+            background-color: rgba(0, 0, 0, 0.85);
+        }
+
+        /* Haber içeriği kare yapılmış */
+        .news-content {
+            display: none;
+            color: white;
+            background-color: rgba(0, 0, 0, 0.85);
+            padding: 20px;
+            margin-top: 20px;
+            border-radius: 10px;
+            font-size: 1.2rem;
+            line-height: 1.7;
+            max-width: 80%;
+            margin: 20px auto;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
+            transition: opacity 0.5s ease, transform 0.3s ease;
+            width: 100%;
+            height: 250px; /* Kare yapmak için yükseklik */
+            overflow: hidden;
+            border-radius: 15px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .news-content.active {
+            display: flex;
+            animation: growContent 0.8s ease-out;
+        }
+
+        @keyframes growContent {
+            0% { opacity: 0; transform: scale(0.8); }
+            100% { opacity: 1; transform: scale(1); }
+        }
+
+        /* Mobil uyumluluk */
+        @media (max-width: 768px) {
+            body {
+                padding: 20px;
+            }
+
+            h1 {
+                font-size: 2.5rem;
+            }
+
+            .news-item {
+                height: 220px;
+            }
+
+            .news-gallery {
+                grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+                gap: 15px;
+            }
         }
 
     </style>
@@ -123,37 +163,28 @@
 <body>
 
     <h1>Güncel Haberler</h1>
+    <p>En Son Gelişmeler ve Öne Çıkanlar</p>
 
-    <!-- Galeri Kısmı -->
-    <div class="gallery">
-        <div class="image-container">
-            <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 1" onclick="openFullscreen(this)">
+    <div class="news-gallery">
+        <div class="news-item" onclick="showContent(1)">
+            <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Haber 1">
+            <div class="title">Durdurlamaz!</div>
         </div>
-        <div class="image-container">
-            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 2" onclick="openFullscreen(this)">
-        </div>
-        <!-- Daha fazla resim ekleyebilirsiniz -->
     </div>
 
-    <!-- Tam Ekran Görseli -->
-    <div class="fullscreen" id="fullscreen">
-        <button class="close-btn" onclick="closeFullscreen()">X</button>
-        <img id="fullscreenImage" src="" alt="Fullscreen Image">
+    <div class="news-content" id="content-1">
+        <h2>Durdurulamaz</h2>
+        <p>A Tierden B Tiere Düşen mehmet12ws Diğer Sezon Yükselmek İçin Son Gücüyle Efor Sarfediyor Attığı Mosslar İle Takıma Gol Ve Defansif Olarak Katkı Sağlayan mehmet12ws Herkesi Heyecanlandırıyor</p>
     </div>
 
     <script>
-        function openFullscreen(image) {
-            const fullscreen = document.getElementById("fullscreen");
-            const fullscreenImage = document.getElementById("fullscreenImage");
-            fullscreenImage.src = image.src;
-            fullscreen.classList.add("active");
-        }
-
-        function closeFullscreen() {
-            const fullscreen = document.getElementById("fullscreen");
-            fullscreen.classList.remove("active");
+        function showContent(newsId) {
+            const content = document.querySelectorAll('.news-content');
+            content.forEach((item) => {
+                item.classList.remove('active');
+            });
+            document.getElementById('content-' + newsId).classList.add('active');
         }
     </script>
-
 </body>
 </html>
