--- a/index.html
+++ b/index.html
@@ -1,37 +1,211 @@
-  <!-- Footer -->
-  <footer>
-    <p>© 2025 mehmet12ws. Tüm Hakları Saklıdır. <a href="#navbar">Yukarı Çık</a></p>
-  </footer>
+<!DOCTYPE html>
+<html lang="tr">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>mehmet12ws</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&family=Dancing+Script&display=swap" rel="stylesheet">
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-  <!-- Hero Bölümüne Arka Plan Videosu -->
-  <style>
-    .hero-video {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-      z-index: -1;
-      opacity: 0.6; /* Videonun görünümünü yumuşatır */
-    }
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #0a0a0a;
+            color: white;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            overflow: hidden;
+            position: relative;
+            text-align: center;
+            padding: 20px;
+            flex-direction: column; /* Dikey yerleşim */
+        }
 
-    .hero-content {
-      position: relative;
-      z-index: 1;
-    }
-  </style>
+        h1 {
+            font-family: 'Dancing Script', cursive;
+            font-size: 3.5rem;
+            color: #fff;
+            text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+            animation: fadeInText 2s ease-out;
+        }
 
-  <section class="hero">
-    <video autoplay muted loop class="hero-video">
-      <source src="https://www.w3schools.com/howto/rain.mp4" type="video/mp4">
-      Tarayıcınız video etiketini desteklemiyor.
-    </video>
-    <div class="hero-content">
-      <h1>mehmet12ws</h1>
-      <p>Hayat olmasa da seninle güzel.</p>
-      <a href="#about">Hakkımda Daha Fazla</a>
+        @keyframes fadeInText {
+            0% { opacity: 0; transform: translateY(-50px); }
+            100% { opacity: 1; transform: translateY(0); }
+        }
+
+        p {
+            font-size: 1.5rem;
+            color: rgba(255, 255, 255, 0.8);
+            margin-top: 20px;
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.4);
+            animation: fadeInText 3s ease-out 1s forwards;
+        }
+
+        .gallery {
+            display: grid;
+            grid-template-columns: repeat(4, 1fr);
+            gap: 20px;
+            margin-top: 40px;
+            width: 80%;
+            position: relative;
+        }
+
+        .image-container {
+            position: relative;
+            width: 200px; /* Küçültülmüş boyut */
+            height: 200px; /* Küçültülmüş boyut */
+            margin: 10px;
+            border-radius: 15px;
+            overflow: hidden;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            cursor: pointer;
+            background-color: rgba(255, 255, 255, 0.1);
+            border: 2px solid rgba(255, 255, 255, 0.3);
+            transform: rotate(5deg);
+        }
+
+        .image-container:hover {
+            transform: scale(1.05) rotate(0deg);
+            box-shadow: 0 0 40px rgba(255, 255, 255, 0.8);
+        }
+
+        .image-container img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: transform 0.3s ease;
+            border-radius: 15px;
+        }
+
+        .image-container:hover img {
+            transform: scale(1.1);
+        }
+
+        /* Tam ekran modunun stili */
+        .fullscreen {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.9);
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            z-index: 1000;
+            display: none;
+        }
+
+        .fullscreen img {
+            max-width: 95%;
+            max-height: 95%;
+            object-fit: contain;
+            border-radius: 15px;
+        }
+
+        .fullscreen.active {
+            display: flex;
+        }
+
+        .close-btn {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            font-size: 40px;
+            color: white;
+            background: rgba(0, 0, 0, 0.6);
+            border: none;
+            border-radius: 50%;
+            cursor: pointer;
+            padding: 10px;
+            z-index: 2000;
+        }
+
+        .close-btn:hover {
+            background: rgba(255, 255, 255, 0.2);
+        }
+
+        /* Video Stili */
+        .video-container {
+            width: 70%;
+            max-width: 700px; /* Küçültülmüş boyut */
+            margin-top: 50px;
+            position: relative;
+            background-color: rgba(255, 255, 255, 0.1);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.6);
+            display: flex;
+            justify-content: center; /* Ortalamak için */
+            align-items: center;
+            margin-left: 10%; /* Sağ tarafa kaydırmak için */
+        }
+
+        video {
+            width: 100%;
+            height: auto;
+            border-radius: 15px;
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.5);
+        }
+    </style>
+</head>
+<body>
+
+    <div>
+        <h1>Hayat Olmasada</h1>
+        <p>Seninle Güzel</p>
+
+        <div class="gallery">
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Resim 1" onclick="openFullscreen(this)">
+            </div>
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/qbfg756.jpg" alt="Resim 2" onclick="openFullscreen(this)">
+            </div>
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/a2tcq5c.jpg" alt="Resim 3" onclick="openFullscreen(this)">
+            </div>
+            <div class="image-container">
+                <img src="https://i.hizliresim.com/hljwsvz.jpg" alt="Resim 4" onclick="openFullscreen(this)">
+            </div>
+        </div>
+        
+        <!-- Video Ekleme Alanı -->
+        <div class="video-container">
+            <video controls>
+                <source src="https://cdn.discordapp.com/attachments/1196885529845829674/1316820602002079805/inter_tecavuz.mp4?ex=677ac2c0&is=67797140&hm=cc2498b7fd51b4a923c80e07c2d31d75b3b28f17a1241d27f48b319f3f59a41e&" type="video/mp4">
+                Your browser does not support the video tag.
+            </video>
+        </div>
+
     </div>
-  </section>
+
+    <div class="fullscreen" id="fullscreen-container">
+        <button class="close-btn" onclick="closeFullscreen()">×</button>
+        <img id="fullscreen-image" src="" alt="Fullscreen Image">
+    </div>
+
+    <script>
+        function openFullscreen(imgElement) {
+            var fullscreenContainer = document.getElementById('fullscreen-container');
+            var fullscreenImage = document.getElementById('fullscreen-image');
+            fullscreenImage.src = imgElement.src;
+            fullscreenContainer.classList.add('active');
+        }
+
+        function closeFullscreen() {
+            var fullscreenContainer = document.getElementById('fullscreen-container');
+            fullscreenContainer.classList.remove('active');
+        }
+    </script>
+
 </body>
 </html>
