--- a/haber.html
+++ b/haber.html
@@ -44,7 +44,7 @@
         .news-gallery {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 30px;
+            gap: 20px;
             width: 80%;
             margin-top: 40px;
             position: relative;
@@ -63,7 +63,7 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
             opacity: 0.9;
-            object-fit: contain; /* Resmin tamamının görünmesi için */
+            object-fit: cover; /* Resmin kenarlardan taşmasını engeller */
         }
 
         .news-item:hover {
@@ -75,7 +75,7 @@
         .news-item img {
             width: 100%;
             height: 100%;
-            object-fit: contain; /* Resmi kareye uyumlu şekilde yerleştirir */
+            object-fit: cover; /* Resmi düzgün yerleştirir */
             border-radius: 15px;
             transition: transform 0.3s ease;
         }
@@ -87,22 +87,23 @@
         /* Başlık Resminin Üzerinde Görünmesi */
         .news-item .title {
             position: absolute;
-            bottom: 0;
-            left: 0;
-            right: 0;
+            top: 10px;
+            left: 50%;
+            transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            font-size: 1.5rem;
+            font-size: 1.8rem;
             padding: 10px;
             text-align: center;
             font-weight: bold;
             font-family: 'Poppins', sans-serif;
-            transition: transform 0.3s ease, background-color 0.3s ease;
+            border-radius: 10px;
+            transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
         .news-item:hover .title {
-            transform: translateY(-10px);
             background-color: rgba(0, 0, 0, 0.85);
+            transform: translateX(-50%) translateY(-10px);
         }
 
         /* Haber içeriği kare yapılmış */
