--- a/haber.html
+++ b/haber.html
@@ -28,16 +28,16 @@
 
         h1 {
             font-family: 'Dancing Script', cursive;
-            font-size: 3rem;
+            font-size: 2.5rem;
             color: #fff;
-            text-shadow: 0 0 15px rgba(255, 255, 255, 0.6);
+            text-shadow: 0 0 10px rgba(255, 255, 255, 0.6);
             margin-bottom: 20px;
         }
 
         p {
-            font-size: 1.3rem;
+            font-size: 1rem;
             color: rgba(255, 255, 255, 0.8);
-            margin-bottom: 40px;
+            margin-bottom: 30px;
             text-shadow: 0 0 8px rgba(255, 255, 255, 0.4);
         }
 
@@ -46,18 +46,18 @@
             grid-template-columns: repeat(4, 1fr);
             gap: 20px;
             width: 80%;
-            margin-top: 40px;
+            margin-top: 30px;
             position: relative;
         }
 
         .news-item {
             position: relative;
             width: 100%;
-            height: 250px; /* Kare görsel boyutu */
+            height: 220px; /* Daha küçük boyut */
             margin: 10px;
-            border-radius: 15px;
+            border-radius: 10px;
             overflow: hidden;
-            box-shadow: 0 0 25px rgba(255, 255, 255, 0.6);
+            box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
             background-color: rgba(255, 255, 255, 0.1);
             border: 2px solid rgba(255, 255, 255, 0.3);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
@@ -66,14 +66,14 @@
 
         .news-item:hover {
             transform: scale(1.05);
-            box-shadow: 0 0 50px rgba(255, 255, 255, 0.8);
+            box-shadow: 0 0 30px rgba(255, 255, 255, 0.8);
         }
 
         .news-item img {
             width: 100%;
             height: 100%;
-            object-fit: cover; /* Resmi kare yapmak için */
-            border-radius: 15px;
+            object-fit: cover;
+            border-radius: 10px;
             transition: transform 0.3s ease;
         }
 
@@ -84,23 +84,23 @@
         /* Başlık Resminin Üzerinde Görünmesi */
         .news-item .title {
             position: absolute;
-            top: 10px;
+            top: 5px;
             left: 50%;
             transform: translateX(-50%);
             background-color: rgba(0, 0, 0, 0.7);
             color: white;
-            font-size: 1.8rem;
-            padding: 10px;
+            font-size: 1.3rem; /* Küçültülmüş başlık boyutu */
+            padding: 8px;
             text-align: center;
             font-weight: bold;
             font-family: 'Poppins', sans-serif;
-            border-radius: 10px;
+            border-radius: 8px;
             transition: background-color 0.3s ease, transform 0.3s ease;
         }
 
         .news-item:hover .title {
             background-color: rgba(0, 0, 0, 0.85);
-            transform: translateX(-50%) translateY(-10px);
+            transform: translateX(-50%) translateY(-8px);
         }
 
         /* Haber içeriği küçük ve şık olacak şekilde ayarlandı */
@@ -108,17 +108,15 @@
             display: none;
             color: white;
             background-color: rgba(0, 0, 0, 0.85);
-            padding: 20px;
-            margin-top: 20px;
+            padding: 15px;
+            margin-top: 10px;
             border-radius: 10px;
-            font-size: 1rem;
-            line-height: 1.6;
+            font-size: 0.95rem; /* Küçültülmüş içerik boyutu */
+            line-height: 1.5;
             max-width: 80%;
             margin: 20px auto;
             box-shadow: 0 0 20px rgba(255, 255, 255, 0.4);
             transition: opacity 0.5s ease, transform 0.3s ease;
-            width: 100%;
-            height: auto;
         }
 
         .news-content.active {
@@ -138,11 +136,11 @@
             }
 
             h1 {
-                font-size: 2.5rem;
+                font-size: 2rem;
             }
 
             .news-item {
-                height: 220px;
+                height: 180px;
             }
 
             .news-gallery {
