--- a/haber.html
+++ b/haber.html
@@ -63,6 +63,7 @@
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
             object-fit: cover;
+            border-radius: 10px;
         }
 
         .news-item:hover {
@@ -74,8 +75,8 @@
             width: 100%;
             height: 100%;
             object-fit: cover;
-            border-radius: 10px;
             transition: transform 0.3s ease;
+            border-radius: 10px;
         }
 
         .news-item:hover img {
@@ -162,8 +163,8 @@
 
         <!-- Haber 2 (Yeni haber ekledik) -->
         <div class="news-item" onclick="showContent(2)">
-            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
-            <div class="title">O Bir Lider</div>
+            <img src="https://i.hizliresim.com/b3ktk7g.jpg" alt="Haber 2">
+            <div class="title">Yeni Futbol Transferi</div>
         </div>
     </div>
 
@@ -174,8 +175,8 @@
     </div>
 
     <div class="news-content" id="content-2">
-        <h2>O Bir Lider</h2>
-        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığına Oynuyor</p>
+        <h2>Yeni Futbol Transferi</h2>
+        <p>Yeni futbol transferi takıma büyük katkı sağlayacak. Futbol dünyasında ses getiren bu transferle ilgili detaylar...</p>
     </div>
 
     <script>
