--- a/haber.html
+++ b/haber.html
@@ -163,8 +163,8 @@
 
         <!-- Haber 2 (Yeni haber ekledik) -->
         <div class="news-item" onclick="showContent(2)">
-            <img src="https://i.hizliresim.com/b3ktk7g.jpg" alt="Haber 2">
-            <div class="title">Yeni Futbol Transferi</div>
+            <img src="https://i.hizliresim.com/4zr3tdy.jpg" alt="Haber 2">
+            <div class="title">O Bir Lider</div>
         </div>
     </div>
 
@@ -175,8 +175,8 @@
     </div>
 
     <div class="news-content" id="content-2">
-        <h2>Yeni Futbol Transferi</h2>
-        <p>Yeni futbol transferi takıma büyük katkı sağlayacak. Futbol dünyasında ses getiren bu transferle ilgili detaylar...</p>
+        <h2>O Bir Lide</h2>
+        <p>Aldığı Ödüller Ve Attığı Goller İle Rakiplerini Kışkırtan Sicardi Bu Sezon Gol Krallığınıa Oynuyor</p>
     </div>
 
     <script>
